--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
